k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: email-client-nestjs
  labels:
    name: email-client-nestjs
